scribe worker
